k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app
spec:
  selector:
    app: flask-api # (need to match the labels app)
  ports:
    - protocol: TCP
      port: 8080 # (expose port)
      targetPort: 5000 # (container port)
