k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-app
spec:
  rules:
  - host: "python-app.test.com" # add hostname
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-app # service name must be match in service.yaml
            port:
              number: 8080 # check expose port in service.yaml
